--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "version": "0.1.0",
-  "license": "MIT",
+  "license": "(Apache-2.0 OR MIT)",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
@@ -8,34 +8,27 @@
     "src"
   ],
   "engines": {
-    "node": ">=10"
+    "node": ">=12"
   },
   "scripts": {
     "start": "tsdx watch",
     "build": "tsdx build",
     "test": "tsdx test",
-    "lint": "tsdx lint",
+    "lint": "tsdx lint src test",
     "prepare": "tsdx build",
     "size": "size-limit",
     "analyze": "size-limit --why"
   },
-  "peerDependencies": {},
-  "prettier": {
-    "printWidth": 80,
-    "semi": true,
-    "singleQuote": true,
-    "trailingComma": "es5"
-  },
   "name": "key-did-provider-secp256k1",
   "author": "Joel Thorstensson",
-  "module": "dist/secp256k1keydidprovider.esm.js",
+  "module": "dist/key-did-provider-secp256k1.esm.js",
   "size-limit": [
     {
-      "path": "dist/secp256k1keydidprovider.cjs.production.min.js",
+      "path": "dist/key-did-provider-secp256k1.cjs.production.min.js",
       "limit": "10 KB"
     },
     {
-      "path": "dist/secp256k1keydidprovider.esm.js",
+      "path": "dist/key-did-provider-secp256k1.esm.js",
       "limit": "10 KB"
     }
   ],
